# UmbrageBot

./: README.md  package.json  pnpm-lock.yaml
src/: app.html  global.css  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  database.rs  input_validator.rs  lib.rs  logging.rs  main.rs
src-tauri/src/app_config/: bot.rs  commands.rs  mod.rs
src-tauri/src/bot/: commands.rs  event_handler.rs  mod.rs
src-tauri/src/bot/account_manager/: account_status.rs  account_username.rs  activity.rs  commands.rs  mod.rs
src-tauri/src/config/: bot_config.rs  commands.rs  mod.rs
src-tauri/src/database/: activities.rs  bot_accounts.rs  commands.rs  mod.rs  random.rs
src-tauri/src/database/scripts/: create_db.sql  delete_bot.sql
src-tauri/src/event_manager/: events.rs  mod.rs
src-tauri/src/timer_manager/: commands.rs  mod.rs  timer.rs
src/components/: button.svelte  checkbox.svelte  dialog.svelte  divider.svelte  dropdown.svelte  error_popup.svelte  icon_button.svelte  loading_spinner.svelte  settings_row.svelte  text_button.svelte  text_input.svelte  time_slider.svelte  timer_info.svelte  title_bar.svelte  toggle_slider.svelte
src/components/context_menu/: context_menu.svelte  context_menu_custom_item.svelte  context_menu_item.svelte
src/components/error_popup/: error_item.svelte  error_popup.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/dashboard/: +layout.svelte  sidebar.svelte  sidebar_button.svelte
src/routes/dashboard/account/: +page.svelte  tab_selector.svelte  top_banner.svelte  username_tab.svelte
src/routes/dashboard/account/tabs/: activity_tab.svelte
src/routes/start_page/: +page.svelte  add_bot_dialog.svelte  bot_account.ts  bot_accounts.ts  bot_card.svelte
src/stores/: bot_accounts_store.ts  bot_activity_store.ts  bot_config_store.ts  bot_profile_store.ts
