[package]
name = "UmbrageBot"
version = "2.0.0"
description = "A Discord Bot Application"
authors = ["Sabjen"]
edition = "2021"

#
# [profile.release]
# codegen-units = 1 # Allows LLVM to perform better optimization.
# lto = true # Enables link-time-optimizations.
# opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
# panic = "abort" # Higher performance by disabling panic handlers.
# strip = true # Ensures debug symbols are removed.


[lib]
name = "discord_bot_lib" # keep _lib
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [ "tray-icon" ] }
tauri-plugin-opener = "2.2.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

serenity = { default-features = false, features = [ "full" ], version = "0.12" }
tokio = { version = "1.43.0", features = ["full"] }
chrono = "0.4.39"

rusqlite = { version = "0.33.0", features = ["bundled"] }
songbird = { version="0.4.6" }
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.4" }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

tauri-plugin-shell = "2"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
