[package]
name = "UmbrageBot"
version = "2.0.0"
description = "A Discord Bot Application"
authors = ["Sabjen"]
edition = "2024"

#
# [profile.release]
# codegen-units = 1 # Allows LLVM to perform better optimization.
# lto = true # Enables link-time-optimizations.
# opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
# panic = "abort" # Higher performance by disabling panic handlers.
# strip = true # Ensures debug symbols are removed.


[lib]
name = "discord_bot_lib" # keep _lib
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [ "tray-icon" ] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"

serenity = { default-features = false, features = [ "full" ], version = "0.12.4" }
tokio = { version = "1.46.1", features = ["full"] }
chrono = "0.4.41"

rusqlite = { version = "0.37.0", features = ["bundled"] }
songbird = { version="0.5.0" }
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.4" }
tauri-plugin-dialog = "2.3.0"
tauri-plugin-fs = "2.4.0"

tauri-plugin-shell = "2.3.0"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.3.0"
