[package]
name = "UmbrageBot"
version = "2.0.0"
description = "A Discord Bot Application"
authors = ["Sabjen"]
edition = "2024"

#
# [profile.release]
# codegen-units = 1 # Allows LLVM to perform better optimization.
# lto = true # Enables link-time-optimizations.
# opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
# panic = "abort" # Higher performance by disabling panic handlers.
# strip = true # Ensures debug symbols are removed.


[lib]
name = "discord_bot_lib" # keep _lib
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [ "tray-icon" ] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
convert_case = "0.8.0"
rand = "0.9.2"
uuid = "1.17.0"

serenity = { default-features = false, features = [ "full" ], version = "0.12.4" }
tokio = { version = "1.46.1", features = ["full"] }
chrono = "0.4.41"

rusqlite = { version = "0.37.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"

songbird = { version="0.5.0" }
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.4" }
tauri-plugin-dialog = "2.3.1"
tauri-plugin-fs = "2.4.1"

tauri-plugin-shell = "2.3.0"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.4.0"
